# gz_sim-ss14_project

./: .gitmodules  CMakeLists.txt  README.md
docs/: architecture.graphml
ext/gtest/: CMakeLists.txt
include/: GazeboTest.hh  GazeboTestServer.hh  TestMethods.hh  TestPlugin.hh  control_portal.hh  portal_controller.hh  portal_controller_comm.h
models/portal_robot/: model.config  model.sdf
msgs/: CMakeLists.txt  portal_control_request.proto
src/: GazeboTestServer.cpp  TestPlugin.cpp  control_portal.cpp  gztest_helpers.cpp  portal_controller.cc  portal_controller.cpp  portal_controller_comm.cpp  portal_controller_publisher.cpp
tests/: another_test.cpp  delayed_tests.cpp  test_stacking.cpp  world_loadtest.cpp
worlds/: portal_robot_with_bricks  portal_robot_with_bricks_misplaced  test1.sdf  two_cylinders
